# src/server/build/swagger.json
@@ -72,6 +72,99 @@
 				"type": "object",
 				"description": "Make all properties in T optional"
 			},
+			"Miembro": {
+				"properties": {
+					"_id": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"name": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string"
+					},
+					"department": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"name",
+					"role",
+					"department",
+					"email"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_Miembro.Exclude_keyofMiembro._id-or-createdAt-or-updatedAt__": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string"
+					},
+					"department": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"role",
+					"department",
+					"email"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Miembro._id-or-createdAt-or-updatedAt_": {
+				"$ref": "#/components/schemas/Pick_Miembro.Exclude_keyofMiembro._id-or-createdAt-or-updatedAt__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"MiembroCreationParams": {
+				"$ref": "#/components/schemas/Omit_Miembro._id-or-createdAt-or-updatedAt_"
+			},
+			"Partial_MiembroCreationParams_": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string"
+					},
+					"department": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
 			"Eventos": {
 				"properties": {
 					"_id": {
@@ -257,6 +350,113 @@
 							"Próximamente",
 							"Finalizado"
 						]
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
+			"Documento": {
+				"properties": {
+					"_id": {
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+					},
+					"nombre": {
+						"type": "string"
+					},
+					"categoria": {
+						"type": "string"
+					},
+					"archivo": {
+						"type": "string"
+					},
+					"peso": {
+						"type": "string"
+					},
+					"fecha": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"disponible": {
+						"type": "boolean"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"nombre",
+					"categoria",
+					"archivo",
+					"fecha",
+					"disponible"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_Documento.Exclude_keyofDocumento._id-or-createdAt-or-updatedAt__": {
+				"properties": {
+					"nombre": {
+						"type": "string"
+					},
+					"categoria": {
+						"type": "string"
+					},
+					"archivo": {
+						"type": "string"
+					},
+					"peso": {
+						"type": "string"
+					},
+					"fecha": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"disponible": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"nombre",
+					"categoria",
+					"archivo",
+					"fecha",
+					"disponible"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Documento._id-or-createdAt-or-updatedAt_": {
+				"$ref": "#/components/schemas/Pick_Documento.Exclude_keyofDocumento._id-or-createdAt-or-updatedAt__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"DocumentoCreationParams": {
+				"$ref": "#/components/schemas/Omit_Documento._id-or-createdAt-or-updatedAt_"
+			},
+			"Partial_DocumentoCreationParams_": {
+				"properties": {
+					"nombre": {
+						"type": "string"
+					},
+					"categoria": {
+						"type": "string"
+					},
+					"archivo": {
+						"type": "string"
+					},
+					"peso": {
+						"type": "string"
+					},
+					"fecha": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"disponible": {
+						"type": "boolean"
 					}
 				},
 				"type": "object",
@@ -467,6 +667,187 @@
 							"schema": {
 								"$ref": "#/components/schemas/UsuarioCreationParams",
 								"description": "- Los datos del usuario a crear."
+							}
+						}
+					}
+				}
+			}
+		},
+		"/miembros/{miembroId}": {
+			"get": {
+				"operationId": "GetMiembro",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Miembro"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Miembro not found"
+					}
+				},
+				"tags": [
+					"Miembros"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "miembroId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateMiembro",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Miembro"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Miembro not found"
+					}
+				},
+				"tags": [
+					"Miembros"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "miembroId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_MiembroCreationParams_"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteMiembro",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"success": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"success"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Miembro not found"
+					}
+				},
+				"tags": [
+					"Miembros"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "miembroId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/miembros": {
+			"get": {
+				"operationId": "GetMiembros",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Miembro"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Miembros"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateMiembro",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Miembro"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Miembros"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/MiembroCreationParams"
 							}
 						}
 					}
@@ -808,6 +1189,187 @@
 						}
 					}
 				]
+			}
+		},
+		"/documentos/{documentoId}": {
+			"get": {
+				"operationId": "GetDocumento",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Documento"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Documento not found"
+					}
+				},
+				"tags": [
+					"Documentos"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "documentoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateDocumento",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Documento"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Documento not found"
+					}
+				},
+				"tags": [
+					"Documentos"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "documentoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_DocumentoCreationParams_"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteDocumento",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"success": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"success"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Documento not found"
+					}
+				},
+				"tags": [
+					"Documentos"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "documentoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/documentos": {
+			"get": {
+				"operationId": "GetDocumentos",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Documento"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Documentos"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateDocumento",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Documento"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Documentos"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DocumentoCreationParams"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
